Add rules_xcodeproj generated project
Signed-off-by: kila2 <lijunliang9819@qq.com>
Signed-off-by: Brentley Jones <github@brentleyjones.com>

--- a/Examples/BazelXCBBuildService/BUILD
+++ b/Examples/BazelXCBBuildService/BUILD
@@ -6,6 +6,10 @@ load(
     "@build_bazel_rules_swift//swift:swift.bzl",
     "swift_library",
 )
+load(
+    "@com_github_buildbuddy_io_rules_xcodeproj//xcodeproj:xcodeproj.bzl",
+    "xcodeproj",
+)
 
 swift_library(
     name = "BazelXCBBuildService.library",
@@ -25,6 +29,15 @@ macos_command_line_application(
     name = "BazelXCBBuildService",
     minimum_os_version = "11.0",
     deps = [":BazelXCBBuildService.library"],
+)
+
+xcodeproj(
+    name = "xcodeproj",
+    project_name = "BazelXCBuildService",
+    targets = [
+        ":BazelXCBBuildService",
+    ],
+    tags = ["manual"],
 )
 
 sh_test(
