--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -25,3 +25,14 @@ use_repo(
     non_module_deps,
     "com_github_apple_swift_collections",
 )
+
+dev_non_module_deps = use_extension(
+    "//lib:extensions.bzl",
+    "dev_non_module_deps",
+    dev_dependency = True,
+)
+use_repo(
+    dev_non_module_deps,
+    "com_github_pointfreeco_swift_custom_dump",
+    "com_github_pointfreeco_xctest_dynamic_overlay",
+)
